# devpi-admin

./: .gitignore  INSTALL.textile  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
devpi_admin/: __init__.py  customizer.py  main.py  tokens.py
devpi_admin/static/: index.html
devpi_admin/static/css/: style.css
devpi_admin/static/js/: api.js  app.js  theme.js
src/devpi_admin/: main.py
src/devpi_admin/static/: index.html
src/devpi_admin/static/css/: style.css
src/devpi_admin/static/js/: api.js  app.js
tests/: __init__.py  test_acl_read.py  test_cached_versions.py  test_devpi_tokens_ui.py  test_filter.py  test_helpers.py  test_hooks.py  test_json_safe.py  test_package.py  test_pipconf.py  test_tokens.py  test_tween.py  test_view_helpers.py  test_wants_html.py
